--- a/src/main/resources/templates/persons/list.html
+++ b/src/main/resources/templates/persons/list.html
@@ -4,7 +4,7 @@
     <title>Persons</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
-<link rel="stylesheet" type="text/css" href="/address-book/static/css/main.css">
+<link rel="stylesheet" type="text/css" href="../static/css/main.css">
 <body>
 	<form action="person" method="get">
 		<table style="width: 60%;">
