Person Update Page framework

--- a/src/main/resources/templates/greetings/greeting.html
+++ b/src/main/resources/templates/greetings/greeting.html
@@ -1,11 +1,12 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Name & Date HTML example</title>
+    <title>Simple checkout page</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
     <p th:text="'Hello, ' + ${name} + '!'" />
     <p th:text="'Today is ' + ${date} + '.'"/>
+    <a href="index.html">Go to starting page</a><br><br>
 </body>
 </html>
