--- a/src/main/resources/templates/persons/list.html
+++ b/src/main/resources/templates/persons/list.html
@@ -6,17 +6,20 @@
 </head>
 <link rel="stylesheet" type="text/css" href="../static/css/main.css">
 <body>
-	<form action="person" method="get">
+	<form action="person" method="post">
 		<table style="width: 60%;">
 			<thead>
 				<tr>
-					<th>Person ID</th>
+					<th colspan="2">Person ID</th>
 					<th>Lastname</th>
 					<th>Firstname</th>
 					<th>Birth-Date</th>
 				</tr>
 			</thead>
-			<tr th:each="person: ${persons}" th:id="${person.getPersonId()}" >
+			<tr th:each="person: ${persons}" >
+				<td>
+					<input type="radio" name="personId" th:attr="id='radio_' + ${person.getPersonId()}, value=${person.getPersonId()}"/>
+				</td>
 				<td th:text ="${person.getPersonId()}"></td>
 				<td th:text ="${person.getLastname()}"></td>
 				<td th:text ="${person.getFirstname()}"></td>
@@ -24,10 +27,10 @@
 			</tr>
 			<tr>
 				<td colspan="4">
-					<button type="submit" name="action" id="action" value="ADD" >Add</button>
-					<button type="submit" name="action" id="action" value="EDIT">Edit</button>
-					<button type="submit" name="action" id="action" value="DELETE">Delete</button>
-					<button type="submit" name="action" id="action" value="HOME">Home</button>
+					<button type="submit" name="requestAction" id="requestActionAdd" value="ADD" >Add</button>
+					<button type="submit" name="requestAction" id="requestActionEdit" value="EDIT">Edit</button>
+					<button type="submit" name="requestAction" id="requestActionDelete" value="DELETE">Delete</button>
+					<button type="submit" name="requestAction" id="requestActionHome" value="HOME">Home</button>
 				</td>
 			</tr>
 		</table>
