--- a/src/main/webapp/static/css/main.css
+++ b/src/main/webapp/static/css/main.css
@@ -25,3 +25,33 @@ th {
 	font-weight: bold;
 	text-align: center;
 }
+
+table.subtable{	
+	border-style: none;
+	width: 100%;
+}
+
+table.subtable tr{
+	width: 100%
+}
+
+table.subtable td{
+	border-style: solid;
+	border-color: silver;
+	border-width: 1px;
+	width: 50%;
+}
+
+.ellipsesButton {font-weight: 600;}
+
+.centeredPanel{
+  color: white;
+  background: rgb(255, 255, 255);
+  padding: 5px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translateX(-50%) translateY(-50%);
+  -webkit-transform: translate(-50%,-50%);
+  transform: translate(-50%,-50%);
+}
