--- a/src/main/webapp/static/css/main.css
+++ b/src/main/webapp/static/css/main.css
@@ -12,11 +12,27 @@ table {
 	
 }
 
+table input{
+	border-style: none;
+}
+
+table th.id{
+	background-color: #575757;
+	color: white;
+	font-weight: bold;
+}
+
+
 td {
 	border-style: solid;
 	border-color: grey;
 	border-width: 1pt;
 }
+
+td.subtableContainer{
+	border-style: none;
+}
+
 
 
 th {
@@ -26,20 +42,36 @@ th {
 	text-align: center;
 }
 
-table.subtable{	
+table.info {
+	border-style: solid;
+	border-width: 1pt;
+	border-color: grey;
+	font-family: Arial;
+	font-size: 9pt;
+  	width: 60%;	
+}
+
+table.info th {
+	background-color: #575757;
+	color: white;
+	font-weight: bold;
+	text-align: center;
+}
+
+table.info td {
 	border-style: none;
+}
+
+
+table.subtable{	
 	width: 100%;
+	border-style: none;
 }
 
-table.subtable tr{
-	width: 100%
-}
-
-table.subtable td{
+table.subtable td{	
 	border-style: solid;
 	border-color: silver;
 	border-width: 1px;
-	width: 50%;
 }
 
 
