--- a/src/main/resources/templates/greetings/greeting.html
+++ b/src/main/resources/templates/greetings/greeting.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Simple checkout page</title>
+    <title>Greetings</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
